# grizzle_v1

./: .gitignore  frames_2024-11-21_19.35.27.gv
src/grizzle_bringup/: CMakeLists.txt  package.xml
src/grizzle_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/grizzle_controller/: CMakeLists.txt  grizzle_controller.xml  package.xml
src/grizzle_controller/config/: grizzle_controllers.yaml
src/grizzle_controller/grizzle_controller/: slider_control.py
src/grizzle_controller/launch/: controller.launch.py  slider_controller.launch.py
src/grizzle_controller/src/: grizzle_interface.cpp  slider_control.cpp
src/grizzle_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/grizzle_description/launch/: display.launch.py  gazebo.launch.py
src/grizzle_description/meshes/: link1_l_1.stl  link1_r_1.stl  link2_l_1.stl  link2_r_1.stl  link3_l_1.stl  link3_r_1.stl  link4_l_1.stl  link4_r_1.stl
src/grizzle_description/urdf/: grizzle.gazebo  grizzle.trans  grizzle.urdf.xacro  grizzle.xacro  grizzle_gazebo.xacro  grizzle_ros2_control.xacro  materials.xacro
src/grizzle_firmware/: CMakeLists.txt  package.xml
src/grizzle_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/grizzle_py_examples/: package.xml  setup.cfg  setup.py
src/grizzle_scripts/: CMakeLists.txt  package.xml
src/moveit2_scripts/: CMakeLists.txt  package.xml
src/my_robot_bringup/: package.xml
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: TurtleSpawnedListTest.msg
src/my_robot_interfaces/srv/: MoveMainTurtle.srv  SetLed.srv
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py  gazebo.launch.py
src/robot_description/meshes/: link1_L.stl  link2_R.stl  link3_R.stl  link4_R.stl
src/robot_description/urdf/: urdf_assembly.urdf  urdf_assembly.xacro  urdf_assembly_old.urdf
(+24 files in other folders)
